--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "npm": "^6.4.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
   }
 }
