--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "meadowlark_travel",
   "version": "",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-handlebars-sections": "^1.0.1",
     "npm": "^6.4.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "grunt": "^1.0.3",
+    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-exec": "^3.0.0",
     "mocha": "^5.2.0",
     "zombie": "^6.1.3"
   }
