--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-handlebars-sections": "^1.0.1",
+    "mongoose": "^3.8.40",
     "npm": "^6.4.0"
   },
   "devDependencies": {
